network-infra/network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: "CloudFormation template for network infrastructure"

Parameters: 
   Environment:
      Type: String
      Description: "Environment name (e.g., dev, prod)"
    
   VpcCidrBlock:
      Type: String
      Description: "CIDR block for the VPC"

  #  PublicSubnet1Cidr:
  #     Type: String
  #     Description: "CIDR block for the first public subnet"
      
  #  PublicSubnet2Cidr:
  #     Type: String
  #     Description: "CIDR block for the second public subnet"

  #  PrivateSubnet1Cidr:
  #     Type: String
  #     Description: "CIDR block for the first private subnet"

  #  PrivateSubnet2Cidr:
  #     Type: String
  #     Description: "CIDR block for the second private subnet"
      
Resources:
    VPC:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: !Ref VpcCidrBlock
        EnableDnsSupport: true
        EnableDnsHostnames: true
        Tags:
          - Key: Name
            Value: !Sub '${Environment}-vpc'

    internetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: Name
            Value: !Sub '${Environment}-internet-gateway'
    
    VPCGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        VpcId: !Ref VPC
        InternetGatewayId: !Ref internetGateway
      

    publicSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 0, !GetAZs '' ]
        CidrBlock: !Select [ 0, !Cidr [ !Ref VpcCidrBlock, 4, 8 ] ]
        MapPublicIpOnLaunch: true
        Tags:
          - Key: Name
            Value: !Sub '${Environment}-public-subnet-1 (AZ1)'

    publicSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 1, !GetAZs '' ]
        CidrBlock: !Select [ 1, !Cidr [ !Ref VpcCidrBlock, 4, 8 ] ]
        MapPublicIpOnLaunch: true
        Tags: 
          - Key: Name
            Value: !Sub '${Environment}-public-subnet-2 (AZ2)'

    privateSubnet1:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 0, !GetAZs '' ]
        CidrBlock: !Select [ 2, !Cidr [ !Ref VpcCidrBlock, 4, 8 ] ]
        MapPublicIpOnLaunch: false
        Tags:
          - Key: Name
            Value: !Sub '${Environment}-private-subnet-1 (AZ1)'

    privateSubnet2:
      Type: AWS::EC2::Subnet
      Properties:
        VpcId: !Ref VPC
        AvailabilityZone: !Select [ 1, !GetAZs '' ]
        CidrBlock: !Select [ 3, !Cidr [ !Ref VpcCidrBlock, 4, 8 ] ]
        MapPublicIpOnLaunch: false
        Tags:
          - Key: Name
            Value: !Sub '${Environment}-private-subnet-2 (AZ2)'

    natGateway1EIP:
      Type: AWS::EC2::EIP
      DependsOn: VPCGatewayAttachment
      Properties:
        Domain: vpc
    
    natGateway2EIP:
      Type: AWS::EC2::EIP
      DependsOn: VPCGatewayAttachment
      Properties:
        Domain: vpc

    natGateway1:
      Type: AWS::EC2::NatGateway
      Properties:
        SubnetId: !Ref publicSubnet1
        AllocationId: !GetAtt natGateway1EIP.AllocationId
        Tags:
          - Key: Name
            Value: !Sub '${Environment}-nat-gateway-1 (AZ1)'
    
    natGateway2:
      Type: AWS::EC2::NatGateway
      Properties:
        SubnetId: !Ref publicSubnet2
        AllocationId: !GetAtt natGateway2EIP.AllocationId
        Tags:
          - Key: Name
            Value: !Sub '${Environment}-nat-gateway-2 (AZ2)'    
           

    publicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
          - Key: Name
            Value: !Sub  '${Environment}-public-route-table'

    publicRoute:
      Type: AWS::EC2::Route
      DependsOn: VPCGatewayAttachment
      Properties:
        RouteTableId: 
           Ref: publicRouteTable
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref internetGateway

    publicSubnet1RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref publicSubnet1
        RouteTableId: !Ref publicRouteTable 

    publicSubnet2RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref publicSubnet2
        RouteTableId: !Ref publicRouteTable   


    privateRouteTable1:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
          - Key: Name
            Value: !Sub '${Environment}-private-route-table-1 (AZ1)'

    privateRouteTable2:
      Type: AWS::EC2::RouteTable
      Properties:
        VpcId: !Ref VPC
        Tags:
          - Key: Name
            Value: !Sub '${Environment}-private-route-table-2 (AZ2)'
             
    privateSubnet1RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref privateSubnet1
        RouteTableId: !Ref privateRouteTable1  

    privateSubnet2RouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        SubnetId: !Ref privateSubnet2
        RouteTableId: !Ref privateRouteTable2

    privateRoute1:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref privateRouteTable1
           
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref natGateway1

    privateRoute2:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref privateRouteTable2
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref natGateway2


Outputs:
    VPC:
      Description: "VPC ID"
      Value: !Ref VPC
      Export:
        Name: !Sub "${Environment}-vpc-id"
    
    VPCPublicRouteTable:
      Description: "Public Route Table ID"
      Value: !Ref publicRouteTable
      Export:
        Name: !Sub "${Environment}-public-route-table-id"

    VPCPrivateRouteTable1:
      Description: "Private Route Table 1 ID"
      Value: !Ref privateRouteTable1
      Export:
        Name: !Sub "${Environment}-private-route-table-1-id"

    VPCPrivateRouteTable2:
      Description: "Private Route Table 2 ID"
      Value: !Ref privateRouteTable2
      Export:
        Name: 
          Fn::Sub: "${Environment}-private-route-table-2-id"  

    PublicSubnet1:
      Description: "Public Subnet 1 ID"
      Value: !Ref publicSubnet1
      Export:
        Name: !Sub "${Environment}-public-subnet-1-id"

    PublicSubnet2:
      Description: "Public Subnet 2 ID"
      Value: !Ref publicSubnet2
      Export:
        Name: !Sub "${Environment}-public-subnet-2-id"  

    PublicSubnets:
      Description: "List of Public Subnet IDs"
      Value: !Join [ ",", [ !Ref publicSubnet1, !Ref publicSubnet2 ] ]
      Export:
        Name: !Sub "${Environment}-public-subnet-ids"


    PrivateSubnet1:
      Description: "Private Subnet 1 ID"
      Value: !Ref privateSubnet1
      Export:
        Name: !Sub "${Environment}-private-subnet-1-id"
    
    PrivateSubnet2:
      Description: "Private Subnet 2 ID"
      Value: !Ref privateSubnet2
      Export:
        Name: !Sub "${Environment}-private-subnet-2-id" 

    PrivateSubnets:
      Description: "List of Private Subnet IDs"
      Value: !Join [ ",", [ !Ref privateSubnet1, !Ref privateSubnet2 ] ]
      Export:
        Name: !Sub "${Environment}-private-subnet-ids"
